# viz-tools

./: Makefile  README.md  time_steps_vtkjs.py  transformation.txt
convert-pd2/: CMakeLists.txt  convert-pd2.cc  convert_data.cc
sample/: CMakeLists.txt  sample  sample.cc  structured.h
step-40/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  sphere.pd2  sphere_true.vtu  step-40  step-40.cc
vtkjs/AdvancedSceneExplorer/: .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json  webpack.config.js
vtkjs/AdvancedSceneExplorer/src/: SceneExplorer.module.css  SceneExplorerWidget.js  index.js  index.test.js
